RD-2608: Give the dropdown menu a z-index larger than 0 to ensure it overlaps wrapped menu items

--- a/cms/api/src/main/styling/less/_hippo_menu.less
+++ b/cms/api/src/main/styling/less/_hippo_menu.less
@@ -1,5 +1,5 @@
 /*
- * Copyright 2014 Hippo B.V. (http://www.onehippo.com)
+ * Copyright 2014-2015 Hippo B.V. (http://www.onehippo.com)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@
   min-width: 80px;
   font-size: unit(@hippo-menu-fontsize, px);
   padding: 6px 0;
+  z-index: 1;
 
   li {
     clear: left;
@@ -45,7 +46,7 @@
     }
 
     // disabled item
-    span.hippo-toolbar-menu-item-button {  
+    span.hippo-toolbar-menu-item-button {
       color: @hippo-menu-disabled-color;
     }
 
